# translate_datasets

./: Makefile  README.md  mmlu.csv  pyproject.toml  run.py
data/: medical_meadow_pubmed_causal.json
data/input/: medical_meadow_mmmlu.json  medical_meadow_pubmed_causal.json
de/: deu-medical_meadow_mediqa.json  deu-medical_meadow_medqa.json  deu-medical_meadow_mmmlu.json  deu-medical_meadow_pubmed_causal.json  deu-medical_meadow_wikidoc.json  deu-medical_meadow_wikidoc_medical_flashcards.json  deu-medical_meadow_wikidoc_patient_info.json
final/: deu-medical_meadow_mmmlu.json
llm_translate/: main.py
src/llm_translator/: __init__.py
src/llm_translator/gemini/: translate_gemini.py
src/llm_translator/seamless/: seamless_communitcation_main.py
