[tool.poetry]
name = "llm-translate"
version = "0.1.0"
description = ""
authors = ["Marc Mezger <marc.mezger@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_translate"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prefect = "^2.13.4"
pandas = "^2.1.1"
transformers = "^4.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
