[project]
name = "llm-translator"
version = "0.1.0"
description = "A repository to bulk translate datasets using Tools like LLMs or other stuff."
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
dependencies = [
    "langchain-google-vertexai>=1.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_translator"]
